# sia-desktop-app

./: .gitignore  MANIFEST.in  README.md  build.sh  build_installer.iss  main.py  pyproject.toml
etc/: config.ini.example
pyinstaller_hooks/: hook-bs4.py  hook-pydap.py  hook-six.py
src/: download_data_frame.py  downloaded_data_frame.py  home_frame.py  main.py  saved_charts_frame.py  visualizations_frame.py
src/sia_app/: __main__.py
src/sia_app/etc/: config.ini
src/sia_app/utils/: basic_form_fields.py  dataset_utils.py  general_utils.py  global_constants.py  global_variables.py  project_manager.py
src/sia_app/views/: about_app_view.py  data_extractor_view.py  dataset_info_view.py  home_view.py  new_project_view.py  user_manual_view.py  workspace_view.py
src/sia_app/views/charts/: contour_map_view.py  currents_views.py  heatmap_view.py  single_point_time_series_view.py  vertical_slice_view.py  (+2 more)
src/sia_app/widgets/: own_widgets.py
src/utils/: basic_form_fields.py  dataset_utils.py  general_utils.py  global_constants.py  global_variables.py  project_manager.py
src/views/: about_app_view.py  data_extractor_view.py  dataset_info_view.py  download_data_view.py  downloaded_data_view.py  home_view.py  new_project_view.py  saved_charts_view.py  user_manual_view.py  visualizations_view.py  workspace_view.py
src/views/charts/: contour_map_view.py  currents_views.py  heatmap_view.py  single_point_time_series_view.py  single_point_vertical_profile_view.py  vertical_slice_view.py  wind_rose_view.py
src/views/templates/: scrollable_view.py  tab_view.py
src/widgets/: own_widgets.py
(+2 files in other folders)
